Support faint and double underline styles

--- a/test/color_4bit.html
+++ b/test/color_4bit.html
@@ -7,6 +7,14 @@ pre span.fg-blue { color: rgb(0, 0, 238) }
 pre span.fg-magenta { color: rgb(205, 0, 205) }
 pre span.fg-cyan { color: rgb(0, 205, 205) }
 pre span.fg-white { color: rgb(229, 229, 229) }
+pre span.fg-black.faint { color: rgb(0, 0, 0) }
+pre span.fg-red.faint { color: rgb(136, 0, 0) }
+pre span.fg-green.faint { color: rgb(0, 136, 0) }
+pre span.fg-yellow.faint { color: rgb(136, 136, 0) }
+pre span.fg-blue.faint { color: rgb(0, 0, 158) }
+pre span.fg-magenta.faint { color: rgb(136, 0, 136) }
+pre span.fg-cyan.faint { color: rgb(0, 136, 136) }
+pre span.fg-white.faint { color: rgb(152, 152, 152) }
 pre span.fg-bright-black { color: rgb(127, 127, 127) }
 pre span.fg-bright-red { color: rgb(255, 0, 0) }
 pre span.fg-bright-green { color: rgb(0, 255, 0) }
@@ -15,6 +23,14 @@ pre span.fg-bright-blue { color: rgb(92, 92, 255) }
 pre span.fg-bright-magenta { color: rgb(255, 0, 255) }
 pre span.fg-bright-cyan { color: rgb(0, 255, 255) }
 pre span.fg-bright-white { color: rgb(255, 255, 255) }
+pre span.fg-bright-black.faint { color: rgb(84, 84, 84) }
+pre span.fg-bright-red.faint { color: rgb(170, 0, 0) }
+pre span.fg-bright-green.faint { color: rgb(0, 170, 0) }
+pre span.fg-bright-yellow.faint { color: rgb(170, 170, 0) }
+pre span.fg-bright-blue.faint { color: rgb(61, 61, 170) }
+pre span.fg-bright-magenta.faint { color: rgb(170, 0, 170) }
+pre span.fg-bright-cyan.faint { color: rgb(0, 170, 170) }
+pre span.fg-bright-white.faint { color: rgb(170, 170, 170) }
 pre span.bg-black { background: rgb(0, 0, 0) }
 pre span.bg-red { background: rgb(205, 0, 0) }
 pre span.bg-green { background: rgb(0, 205, 0) }
@@ -36,6 +52,9 @@ pre span.bg-bright-white { background: rgb(255, 255, 255) }
 pre span.bold { font-weight: bold }
 pre span.italic { font-weight: italic }
 pre span.underline { text-decoration: underline }
+pre span.double-underline { text-decoration: underline double; }
 </style></head><body><div  class='fg-default bg-default'><pre><span class='fg-black'>█</span><span class='fg-red'>█</span><span class='fg-green'>█</span><span class='fg-yellow'>█</span><span class='fg-blue'>█</span><span class='fg-magenta'>█</span><span class='fg-cyan'>█</span><span class='fg-white'>█</span><span class='fg-bright-black'>█</span><span class='fg-bright-red'>█</span><span class='fg-bright-green'>█</span><span class='fg-bright-yellow'>█</span><span class='fg-bright-blue'>█</span><span class='fg-bright-magenta'>█</span><span class='fg-bright-cyan'>█</span><span class='fg-bright-white'>█</span>
 <span class='bg-black'> </span><span class='bg-red'> </span><span class='bg-green'> </span><span class='bg-yellow'> </span><span class='bg-blue'> </span><span class='bg-magenta'> </span><span class='bg-cyan'> </span><span class='bg-white'> </span><span class='bg-bright-black'> </span><span class='bg-bright-red'> </span><span class='bg-bright-green'> </span><span class='bg-bright-yellow'> </span><span class='bg-bright-blue'> </span><span class='bg-bright-magenta'> </span><span class='bg-bright-cyan'> </span><span class='bg-bright-white'> </span>
+<span class='fg-black faint'>█</span><span class='fg-red faint'>█</span><span class='fg-green faint'>█</span><span class='fg-yellow faint'>█</span><span class='fg-blue faint'>█</span><span class='fg-magenta faint'>█</span><span class='fg-cyan faint'>█</span><span class='fg-white faint'>█</span><span class='fg-bright-black faint'>█</span><span class='fg-bright-red faint'>█</span><span class='fg-bright-green faint'>█</span><span class='fg-bright-yellow faint'>█</span><span class='fg-bright-blue faint'>█</span><span class='fg-bright-magenta faint'>█</span><span class='fg-bright-cyan faint'>█</span><span class='fg-bright-white faint'>█</span>
+<span class='bg-black faint'> </span><span class='bg-red faint'> </span><span class='bg-green faint'> </span><span class='bg-yellow faint'> </span><span class='bg-blue faint'> </span><span class='bg-magenta faint'> </span><span class='bg-cyan faint'> </span><span class='bg-white faint'> </span><span class='bg-bright-black faint'> </span><span class='bg-bright-red faint'> </span><span class='bg-bright-green faint'> </span><span class='bg-bright-yellow faint'> </span><span class='bg-bright-blue faint'> </span><span class='bg-bright-magenta faint'> </span><span class='bg-bright-cyan faint'> </span><span class='bg-bright-white faint'> </span>
 </pre></div></body></html>
