--- a/test/color_8bit.html
+++ b/test/color_8bit.html
@@ -7,6 +7,14 @@ pre span.fg-blue { color: rgb(0, 0, 238) }
 pre span.fg-magenta { color: rgb(205, 0, 205) }
 pre span.fg-cyan { color: rgb(0, 205, 205) }
 pre span.fg-white { color: rgb(229, 229, 229) }
+pre span.fg-black.faint { color: rgb(0, 0, 0) }
+pre span.fg-red.faint { color: rgb(136, 0, 0) }
+pre span.fg-green.faint { color: rgb(0, 136, 0) }
+pre span.fg-yellow.faint { color: rgb(136, 136, 0) }
+pre span.fg-blue.faint { color: rgb(0, 0, 158) }
+pre span.fg-magenta.faint { color: rgb(136, 0, 136) }
+pre span.fg-cyan.faint { color: rgb(0, 136, 136) }
+pre span.fg-white.faint { color: rgb(152, 152, 152) }
 pre span.fg-bright-black { color: rgb(127, 127, 127) }
 pre span.fg-bright-red { color: rgb(255, 0, 0) }
 pre span.fg-bright-green { color: rgb(0, 255, 0) }
@@ -15,6 +23,14 @@ pre span.fg-bright-blue { color: rgb(92, 92, 255) }
 pre span.fg-bright-magenta { color: rgb(255, 0, 255) }
 pre span.fg-bright-cyan { color: rgb(0, 255, 255) }
 pre span.fg-bright-white { color: rgb(255, 255, 255) }
+pre span.fg-bright-black.faint { color: rgb(84, 84, 84) }
+pre span.fg-bright-red.faint { color: rgb(170, 0, 0) }
+pre span.fg-bright-green.faint { color: rgb(0, 170, 0) }
+pre span.fg-bright-yellow.faint { color: rgb(170, 170, 0) }
+pre span.fg-bright-blue.faint { color: rgb(61, 61, 170) }
+pre span.fg-bright-magenta.faint { color: rgb(170, 0, 170) }
+pre span.fg-bright-cyan.faint { color: rgb(0, 170, 170) }
+pre span.fg-bright-white.faint { color: rgb(170, 170, 170) }
 pre span.bg-black { background: rgb(0, 0, 0) }
 pre span.bg-red { background: rgb(205, 0, 0) }
 pre span.bg-green { background: rgb(0, 205, 0) }
@@ -36,6 +52,7 @@ pre span.bg-bright-white { background: rgb(255, 255, 255) }
 pre span.bold { font-weight: bold }
 pre span.italic { font-weight: italic }
 pre span.underline { text-decoration: underline }
+pre span.double-underline { text-decoration: underline double; }
 </style></head><body><div  class='fg-default bg-default'><pre><span class='fg-black'>█</span><span class='fg-red'>█</span><span class='fg-green'>█</span><span class='fg-yellow'>█</span><span class='fg-blue'>█</span><span class='fg-magenta'>█</span><span class='fg-cyan'>█</span><span class='fg-white'>█</span><span class='fg-bright-black'>█</span><span class='fg-bright-red'>█</span><span class='fg-bright-green'>█</span><span class='fg-bright-yellow'>█</span><span class='fg-bright-blue'>█</span><span class='fg-bright-magenta'>█</span><span class='fg-bright-cyan'>█</span><span class='fg-bright-white'>█</span>
 <span style='color: #000000'>█</span><span style='color: #00005f'>█</span><span style='color: #000087'>█</span><span style='color: #0000af'>█</span><span style='color: #0000d7'>█</span><span style='color: #0000ff'>█</span><span style='color: #005f00'>█</span><span style='color: #005f5f'>█</span><span style='color: #005f87'>█</span><span style='color: #005faf'>█</span><span style='color: #005fd7'>█</span><span style='color: #005fff'>█</span><span style='color: #008700'>█</span><span style='color: #00875f'>█</span><span style='color: #008787'>█</span><span style='color: #0087af'>█</span><span style='color: #0087d7'>█</span><span style='color: #0087ff'>█</span><span style='color: #00af00'>█</span><span style='color: #00af5f'>█</span><span style='color: #00af87'>█</span><span style='color: #00afaf'>█</span><span style='color: #00afd7'>█</span><span style='color: #00afff'>█</span><span style='color: #00d700'>█</span><span style='color: #00d75f'>█</span><span style='color: #00d787'>█</span><span style='color: #00d7af'>█</span><span style='color: #00d7d7'>█</span><span style='color: #00d7ff'>█</span><span style='color: #00ff00'>█</span><span style='color: #00ff5f'>█</span><span style='color: #00ff87'>█</span><span style='color: #00ffaf'>█</span><span style='color: #00ffd7'>█</span><span style='color: #00ffff'>█</span>
 <span style='color: #5f0000'>█</span><span style='color: #5f005f'>█</span><span style='color: #5f0087'>█</span><span style='color: #5f00af'>█</span><span style='color: #5f00d7'>█</span><span style='color: #5f00ff'>█</span><span style='color: #5f5f00'>█</span><span style='color: #5f5f5f'>█</span><span style='color: #5f5f87'>█</span><span style='color: #5f5faf'>█</span><span style='color: #5f5fd7'>█</span><span style='color: #5f5fff'>█</span><span style='color: #5f8700'>█</span><span style='color: #5f875f'>█</span><span style='color: #5f8787'>█</span><span style='color: #5f87af'>█</span><span style='color: #5f87d7'>█</span><span style='color: #5f87ff'>█</span><span style='color: #5faf00'>█</span><span style='color: #5faf5f'>█</span><span style='color: #5faf87'>█</span><span style='color: #5fafaf'>█</span><span style='color: #5fafd7'>█</span><span style='color: #5fafff'>█</span><span style='color: #5fd700'>█</span><span style='color: #5fd75f'>█</span><span style='color: #5fd787'>█</span><span style='color: #5fd7af'>█</span><span style='color: #5fd7d7'>█</span><span style='color: #5fd7ff'>█</span><span style='color: #5fff00'>█</span><span style='color: #5fff5f'>█</span><span style='color: #5fff87'>█</span><span style='color: #5fffaf'>█</span><span style='color: #5fffd7'>█</span><span style='color: #5fffff'>█</span>
