--- a/test/link.html
+++ b/test/link.html
@@ -7,6 +7,14 @@ pre span.fg-blue { color: rgb(0, 0, 238) }
 pre span.fg-magenta { color: rgb(205, 0, 205) }
 pre span.fg-cyan { color: rgb(0, 205, 205) }
 pre span.fg-white { color: rgb(229, 229, 229) }
+pre span.fg-black.faint { color: rgb(0, 0, 0) }
+pre span.fg-red.faint { color: rgb(136, 0, 0) }
+pre span.fg-green.faint { color: rgb(0, 136, 0) }
+pre span.fg-yellow.faint { color: rgb(136, 136, 0) }
+pre span.fg-blue.faint { color: rgb(0, 0, 158) }
+pre span.fg-magenta.faint { color: rgb(136, 0, 136) }
+pre span.fg-cyan.faint { color: rgb(0, 136, 136) }
+pre span.fg-white.faint { color: rgb(152, 152, 152) }
 pre span.fg-bright-black { color: rgb(127, 127, 127) }
 pre span.fg-bright-red { color: rgb(255, 0, 0) }
 pre span.fg-bright-green { color: rgb(0, 255, 0) }
@@ -15,6 +23,14 @@ pre span.fg-bright-blue { color: rgb(92, 92, 255) }
 pre span.fg-bright-magenta { color: rgb(255, 0, 255) }
 pre span.fg-bright-cyan { color: rgb(0, 255, 255) }
 pre span.fg-bright-white { color: rgb(255, 255, 255) }
+pre span.fg-bright-black.faint { color: rgb(84, 84, 84) }
+pre span.fg-bright-red.faint { color: rgb(170, 0, 0) }
+pre span.fg-bright-green.faint { color: rgb(0, 170, 0) }
+pre span.fg-bright-yellow.faint { color: rgb(170, 170, 0) }
+pre span.fg-bright-blue.faint { color: rgb(61, 61, 170) }
+pre span.fg-bright-magenta.faint { color: rgb(170, 0, 170) }
+pre span.fg-bright-cyan.faint { color: rgb(0, 170, 170) }
+pre span.fg-bright-white.faint { color: rgb(170, 170, 170) }
 pre span.bg-black { background: rgb(0, 0, 0) }
 pre span.bg-red { background: rgb(205, 0, 0) }
 pre span.bg-green { background: rgb(0, 205, 0) }
@@ -36,6 +52,7 @@ pre span.bg-bright-white { background: rgb(255, 255, 255) }
 pre span.bold { font-weight: bold }
 pre span.italic { font-weight: italic }
 pre span.underline { text-decoration: underline }
+pre span.double-underline { text-decoration: underline double; }
 </style></head><body><div  class='fg-default bg-default'><pre><span><a href='https://example.com'>This is a link</a></span>
 <span><a href='https://ocurrent.org'>OCurrent website</a></span>
 <span class='fg-red'><a href='https://red-carpet.com'>Red foregroung</a></span>
