--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>index</title>
-    <link rel="stylesheet" href="./odoc.css"/>
+    <link rel="stylesheet" href="./_odoc_support/odoc.css"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   </head>
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="ansi/index.html">ansi</a> <span class="version">0.5.0</span></li>
+      <li><a href="ansi/index.html">ansi</a> <span class="version">0.6.0-1-g3f864ca</span></li>
       </ol>
       </div>
     </main>
