promote test cases

--- a/test/color_4bit.html
+++ b/test/color_4bit.html
@@ -50,7 +50,7 @@ pre span.bg-bright-white { background: rgb(255, 255, 255) }
 .fg-default { color: rgb(0, 0, 0) }
 .bg-default { background: rgb(255, 255, 255) }
 pre span.bold { font-weight: bold }
-pre span.italic { font-weight: italic }
+pre span.italic { font-style: italic }
 pre span.underline { text-decoration: underline }
 pre span.double-underline { text-decoration: underline double; }
 </style></head><body><div  class='fg-default bg-default'><pre><span class='fg-black'>█</span><span class='fg-red'>█</span><span class='fg-green'>█</span><span class='fg-yellow'>█</span><span class='fg-blue'>█</span><span class='fg-magenta'>█</span><span class='fg-cyan'>█</span><span class='fg-white'>█</span><span class='fg-bright-black'>█</span><span class='fg-bright-red'>█</span><span class='fg-bright-green'>█</span><span class='fg-bright-yellow'>█</span><span class='fg-bright-blue'>█</span><span class='fg-bright-magenta'>█</span><span class='fg-bright-cyan'>█</span><span class='fg-bright-white'>█</span>
