--- a/test/link.html
+++ b/test/link.html
@@ -50,7 +50,7 @@ pre span.bg-bright-white { background: rgb(255, 255, 255) }
 .fg-default { color: rgb(0, 0, 0) }
 .bg-default { background: rgb(255, 255, 255) }
 pre span.bold { font-weight: bold }
-pre span.italic { font-weight: italic }
+pre span.italic { font-style: italic }
 pre span.underline { text-decoration: underline }
 pre span.double-underline { text-decoration: underline double; }
 </style></head><body><div  class='fg-default bg-default'><pre><span><a href='https://example.com'>This is a link</a></span>
