Respect reverse attr when default color is active (#17)

--- a/test/color_24bit.html
+++ b/test/color_24bit.html
@@ -49,6 +49,8 @@ pre span.bg-bright-cyan { background: rgb(0, 255, 255) }
 pre span.bg-bright-white { background: rgb(255, 255, 255) }
 .fg-default { color: rgb(0, 0, 0) }
 .bg-default { background: rgb(255, 255, 255) }
+.fg-reversed-default { color: rgb(255, 255, 255) }
+.bg-reversed-default { background: rgb(0, 0, 0) }
 pre span.bold { font-weight: bold }
 pre span.italic { font-style: italic }
 pre span.underline { text-decoration: underline }
